# gen-proj

./: CMakeLists.txt  main.cpp  project-template-files.hpp  wix_patch.xml
